tests/golden/type_errors/array_find_nullable_callback_parameter.cd
find([1, nil], fun (value: number): bool { return value > 0; });
