tests/golden/type_errors/array_find_nullable_callback_parameter.err
Type error at 1:21: parameter `value` expects number?, got number
  find([1, nil], fun (value: number): bool { return value > 0; });
                      ^
